SIXTH-291 - Fixed content collapsing on Iphone 7, fixed broken scroll

--- a/src/component/CartItem/CartItem.style.scss
+++ b/src/component/CartItem/CartItem.style.scss
@@ -60,7 +60,7 @@
         display: flex;
         flex-wrap: wrap;
         flex-direction: column;
-        height: 50px;
+        height: 90px;
 
         @include desktop() {
             height: 130px;
